# ch-id-card-telegram-bot

./: Dockerfile  Dockerfile-test-server  README.md  docker-compose.yml  pyproject.toml
src/: app.py  utils.py
tests/: flask_app.py
